// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildMonthlyReport > returns a deterministic snapshot for in-house + on-schedule project 1`] = `
{
  "generatedAt": "2026-05-31T00:00:00.000Z",
  "kind": "monthly",
  "periodEnd": "2026-05-31",
  "periodStart": "2026-05-01",
  "projectId": "proj-009",
  "sections": [
    {
      "heading": "ข้อมูลโครงการ (Project Information)",
      "rows": [
        {
          "label": "รหัสโครงการ (Project Code)",
          "value": "PJ-2569-0012",
        },
        {
          "label": "ชื่อโครงการ (Project Name)",
          "value": "โครงการก่อสร้างฝายทดน้ำห้วยขุนแก้ว ตอน 1",
        },
        {
          "label": "Project Name (English)",
          "value": "Huai Khun Kaeo Weir Construction (Section 1)",
        },
        {
          "label": "งบประมาณ (Budget)",
          "value": "12,500,000 ฿",
        },
        {
          "label": "วันที่เริ่ม (Start Date)",
          "value": "05/01/2569",
        },
        {
          "label": "วันที่สิ้นสุด (End Date)",
          "value": "30/06/2569",
        },
      ],
    },
    {
      "heading": "ช่วงเวลารายงาน (Reporting Period)",
      "rows": [
        {
          "label": "ตั้งแต่ (From)",
          "value": "01/05/2569",
        },
        {
          "label": "ถึง (To)",
          "value": "31/05/2569",
        },
      ],
    },
    {
      "heading": "สรุปการดำเนินงานในงวด (Period Summary)",
      "rows": [
        {
          "label": "กิจกรรมตามแผน (Planned Activities)",
          "value": "—",
        },
        {
          "label": "กิจกรรมที่ทำจริง (Actual Activities)",
          "value": "—",
        },
        {
          "label": "ส่วนต่างจากแผน (Deviations from Plan)",
          "value": "—",
        },
      ],
    },
    {
      "heading": "ความก้าวหน้าทางกายภาพ (Physical Progress)",
      "rows": [
        {
          "label": "ความก้าวหน้าตามแผน (Planned %)",
          "value": "60.0%",
        },
        {
          "label": "ความก้าวหน้าจริง (Actual %)",
          "value": "60%",
        },
        {
          "label": "ความก้าวหน้าสะสม (Cumulative %)",
          "value": "65%",
        },
      ],
    },
    {
      "heading": "ความก้าวหน้าทางการเงิน (Financial Progress)",
      "rows": [
        {
          "label": "งบประมาณรวม (BAC)",
          "value": "12,500,000 ฿",
        },
        {
          "label": "มูลค่างานที่ได้ (EV)",
          "value": "7,500,000 ฿",
        },
        {
          "label": "ค่าใช้จ่ายจริง (AC)",
          "value": "7,200,000 ฿",
        },
        {
          "label": "SPI",
          "value": "0.94",
        },
        {
          "label": "CPI",
          "value": "1.04",
        },
      ],
    },
    {
      "heading": "การวิเคราะห์ความล่าช้า (Delay Analysis)",
      "rows": [
        {
          "label": "สถานะตารางเวลา (Schedule Health)",
          "value": "ตรงตามแผน (On Schedule)",
        },
      ],
    },
    {
      "heading": "หลักฐานภาพถ่าย (Photo / Document Evidence)",
      "rows": [
        {
          "label": "จำนวนเอกสารแนบ (Attached Documents)",
          "value": "0",
        },
        {
          "label": "รหัสล่าสุด (Most-recent IDs)",
          "value": "—",
        },
      ],
    },
  ],
  "signatories": [
    {
      "name": "น.ส.วิภา ขจรศักดิ์",
      "role": "ผู้จัดการโครงการ (Project Manager)",
      "signedAt": null,
    },
    {
      "name": null,
      "role": "วิศวกรผู้ควบคุมงาน (Supervising Engineer)",
      "signedAt": null,
    },
    {
      "name": null,
      "role": "พยาน (Witness)",
      "signedAt": null,
    },
  ],
}
`;

exports[`buildMonthlyReport > returns a deterministic snapshot for outsourced + watch project 1`] = `
{
  "generatedAt": "2026-05-31T00:00:00.000Z",
  "kind": "monthly",
  "periodEnd": "2026-05-31",
  "periodStart": "2026-05-01",
  "projectId": "proj-001",
  "sections": [
    {
      "heading": "ข้อมูลโครงการ (Project Information)",
      "rows": [
        {
          "label": "รหัสโครงการ (Project Code)",
          "value": "PJ-2569-0012",
        },
        {
          "label": "ชื่อโครงการ (Project Name)",
          "value": "โครงการก่อสร้างฝายทดน้ำห้วยขุนแก้ว ตอน 1",
        },
        {
          "label": "Project Name (English)",
          "value": "Huai Khun Kaeo Weir Construction (Section 1)",
        },
        {
          "label": "งบประมาณ (Budget)",
          "value": "12,500,000 ฿",
        },
        {
          "label": "วันที่เริ่ม (Start Date)",
          "value": "05/01/2569",
        },
        {
          "label": "วันที่สิ้นสุด (End Date)",
          "value": "30/06/2569",
        },
      ],
    },
    {
      "heading": "ช่วงเวลารายงาน (Reporting Period)",
      "rows": [
        {
          "label": "ตั้งแต่ (From)",
          "value": "01/05/2569",
        },
        {
          "label": "ถึง (To)",
          "value": "31/05/2569",
        },
      ],
    },
    {
      "heading": "สรุปการดำเนินงานในงวด (Period Summary)",
      "rows": [
        {
          "label": "กิจกรรมตามแผน (Planned Activities)",
          "value": "—",
        },
        {
          "label": "กิจกรรมที่ทำจริง (Actual Activities)",
          "value": "—",
        },
        {
          "label": "ส่วนต่างจากแผน (Deviations from Plan)",
          "value": "—",
        },
      ],
    },
    {
      "heading": "ความก้าวหน้าทางกายภาพ (Physical Progress)",
      "rows": [
        {
          "label": "ความก้าวหน้าตามแผน (Planned %)",
          "value": "64.0%",
        },
        {
          "label": "ความก้าวหน้าจริง (Actual %)",
          "value": "64%",
        },
        {
          "label": "ความก้าวหน้าสะสม (Cumulative %)",
          "value": "65%",
        },
      ],
    },
    {
      "heading": "ความก้าวหน้าทางการเงิน (Financial Progress)",
      "rows": [
        {
          "label": "งบประมาณรวม (BAC)",
          "value": "12,500,000 ฿",
        },
        {
          "label": "มูลค่างานที่ได้ (EV)",
          "value": "8,000,000 ฿",
        },
        {
          "label": "จ่ายแล้ว (Paid to Date)",
          "value": "7,500,000 ฿",
        },
        {
          "label": "SPI",
          "value": "0.98",
        },
        {
          "label": "จ่ายเทียบ BAC (Paid / BAC %)",
          "value": "60.0%",
        },
      ],
    },
    {
      "heading": "การวิเคราะห์ความล่าช้า (Delay Analysis)",
      "rows": [
        {
          "label": "สถานะตารางเวลา (Schedule Health)",
          "value": "ต้องเฝ้าระวัง (Watch) — มีกิจกรรมเสี่ยงต่อความล่าช้า",
        },
      ],
    },
    {
      "heading": "หลักฐานภาพถ่าย (Photo / Document Evidence)",
      "rows": [
        {
          "label": "จำนวนเอกสารแนบ (Attached Documents)",
          "value": "4",
        },
        {
          "label": "รหัสล่าสุด (Most-recent IDs)",
          "value": "doc-102, doc-103, doc-104",
        },
      ],
    },
  ],
  "signatories": [
    {
      "name": "น.ส.วิภา ขจรศักดิ์",
      "role": "ผู้จัดการโครงการ (Project Manager)",
      "signedAt": null,
    },
    {
      "name": "นายกิตติ คงเจริญ",
      "role": "วิศวกรผู้ควบคุมงาน (Supervising Engineer)",
      "signedAt": null,
    },
    {
      "name": null,
      "role": "พยาน (Witness)",
      "signedAt": null,
    },
  ],
}
`;
